# DjangoMicosoftAzureADAuth

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
AzureAuthTemplate/: manage.py
AzureAuthTemplate/AzureAuthTemplate/: asgi.py  backends.py  settings.py  urls.py  wsgi.py
AzureAuthTemplate/testapp/: context_processors.py  middleware.py  models.py  schemas.py  urls.py  views.py
AzureAuthTemplate/testapp/migrations/: 0001_initial.py
AzureAuthTemplate/testapp/templates/: base.html  home.html  protected.html
